<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="178dp"
        android:layout_height="166dp"
        android:layout_marginLeft="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:hint="Username"
        android:textColorHint="@color/black"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_margin="15dp"
        android:background="@drawable/roundedbutton"
        android:text="Login"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginLeft="10dp"
        android:text="No account ? Sign up"
        android:textColor="#040404"
        android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSensor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/data"/>


</LinearLayout>